# deep_sxt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
deep_sxt/data_loader/: image_augmentation.py  image_loader.py
deep_sxt/inference/: tomogram_reconstruction.py  tomogram_segmentation.py
deep_sxt/models/: activation_block.py  bottleneck_conv.py  decoder_block.py  double_decoder_cnn.py  encoder_block.py  global_params.py  midbranch_block.py  resnet_block.py
deep_sxt/training/: loss.py  trainer.py
deep_sxt/utilities/: io.py
network_params/: model_config_semisupervised_2021_05.json
notebooks/: .gitignore  tomogram_2D_segmentation.ipynb  tomogram_3D_reconstruction.ipynb  training_semi_supervised_segmentation.ipynb
outputs/: .gitignore
