[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-sxt"
version = "1.0.0"
authors = [
  { name="Mohsen Sadeghi", email="mohsen.sadeghi@fu-berlin.de" },
]
description = "Software package for deep learning based segmentation and reconstruction of cellular cryo soft-xray tomograms"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = ["deep_sxt"]

[project.urls]
"Homepage" = "https://github.com/noegroup/deep_sxt"
"Bug Tracker" = "https://github.com/noegroup/deep_sxt/issues"

